Controller: Added negative tests on error codes